docs: update module architecture and protocol reference documentation
- Added a module dependency architecture diagram to the module architecture document.
- Revised the protocol reference document to clarify the TCP protocol, request framing, and response formats.
- Enhanced explanations regarding RESP2 and RESP3 negotiation, including the HELLO command and client handshake compatibility.
- Updated the readme to reflect changes in FFM documentation and clarified the structure of existing documents.
- Included a request execution flow diagram in the request execution flow document for better visualization of the process.